# ChangeLog for www-apps/mythweb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.85 2010/10/14 14:43:06 fauli Exp $

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  mythweb-0.22_p22763-r1.ebuild:
  Update DEPEND lines to work with PHP 5.3, backport from testing versions

*mythweb-0.23.1_p25396 (27 Jul 2010)

  27 Jul 2010; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.23.1_p25367.ebuild, +mythweb-0.23.1_p25396.ebuild:
  Update to version that properly identifies itself as 0.23.1

  26 Jul 2010; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.23_p25065.ebuild, mythweb-0.23.1_p25367.ebuild:
  Fix execute permissions for streaming script correctly

*mythweb-0.23.1_p25367 (26 Jul 2010)

  26 Jul 2010; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.23_p25065.ebuild, +mythweb-0.23.1_p25367.ebuild:
  version bump for several upstream fixes. Contains support for 23056
  network protocol. Fix for execute privileges on script for streaming.

  03 Jul 2010; Matti Bickel <mabi@gentoo.org> mythweb-0.23_p25065.ebuild:
  update RDEPEND for php-5.3 (bug #298205)

  11 Jun 2010; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.23_p25065.ebuild:
  remove patch reference

*mythweb-0.23_p25065 (10 Jun 2010)

  10 Jun 2010; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.23_p25065.ebuild:
  Add experimental ebuild for MythTV 0.23

  26 May 2010; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.22_p22763.ebuild:
  remove old verd version

  11 May 2010; Joseph Jezak <josejx@gentoo.org>
  mythweb-0.22_p22763-r1.ebuild:
  Marked ppc stable for bug #309637.

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  mythweb-0.22_p22763-r1.ebuild:
  stable x86, bug 309637

  05 Mar 2010; Richard Freeman <rich0@gentoo.org>
  mythweb-0.22_p22763-r1.ebuild:
  amd64 stable to support mythtv 0.22 transition

  08 Jan 2010; Thomas Anderson <tanderson@gentoo.org>